Update documentation for auth routes | Add return for events Insert
